# Jikan-API

./: README.md  pyproject.toml
src/data/: search_cache.json  test_results.json
src/project/: main.py
src/project/ui/: main_window.py
src/project/utils/: controller.py
