[project]
name = "Jikan_API"
version = "0.1.0"
description = "test"
authors = [
    {name = "Kaleo Kaiiuli",email = "kailk318@hsd.k12.or.us"}
]
license = {text = "N/A"}
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "pyside6 (>=6.11.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"